# rust-embedded-projects

./: README.md
microbit-v2/: .gitignore  Cargo.toml  README.md
microbit-v2/drivers/lsm303agr-acc/: Cargo.toml  README.md
microbit-v2/drivers/lsm303agr-mag/: Cargo.toml  README.md
microbit-v2/projects/project00_hello_world/: Cargo.toml  README.md  build.rs  memory.x  test.txt
microbit-v2/projects/project00_hello_world/src/: main.rs
microbit-v2/projects/project05_env_monitor/: README.md
microbit/project01_compass_level/: README.md
microbit/project02_dodge_game/: README.md
microbit/project03_billboard_uart/: README.md
microbit/project04_billboard_ble/: README.md
stm32f3discovery/: README.md
stm32f3discovery/01_blink_factory/: README.md
stm32f3discovery/02_orientation_tracker/: README.md
stm32f3discovery/03_compass_logger/: README.md
stm32f3discovery/04_uart_led_controller/: README.md
stm32f3discovery/05_sensor_fusion_dashboard/: README.md
