[package]
name = "project00_hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.5", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = "0.3"
embassy-nrf = { version = "0.1", features = ["nrf52833"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
microbit-v2 = "0.14"
cortex-m = "0.7"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization at cost of compile time
