[package]
edition = "2021"
name = "project00_hello_world"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Core Embassy async runtime and executor
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }

# Embassy time management and timers
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

# Embassy support for nRF52833 (micro:bit v2)
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "nrf52833",
    "time-driver-rtc1",
    "time",
] }

# Logging framework
defmt = "0.3"
defmt-rtt = "0.4"

# ARM Cortex-M support
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

# Panic handler with defmt logging
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
